err/chameleon.html.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Chameleon-3.2.egg-info'...
Listing './lib/python3.5/site-packages/chameleon'...
Listing './lib/python3.5/site-packages/chameleon/html'...
Listing './lib/python3.5/site-packages/chameleon/html/tests'...
Listing './lib/python3.5/site-packages/chameleon/html/tests/layouts'...
Listing './lib/python3.5/site-packages/chameleon/tests'...
Listing './lib/python3.5/site-packages/chameleon/tests/inputs'...
Listing './lib/python3.5/site-packages/chameleon/tests/outputs'...
Listing './lib/python3.5/site-packages/chameleon/zpt'...
Listing './lib/python3.5/site-packages/chameleon.core-1.0.4.egg-info'...
Listing './lib/python3.5/site-packages/chameleon.html-0.9.3.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_gettext-3.0.egg-info'...
Listing './lib/python3.5/site-packages/pythongettext'...
Listing './lib/python3.5/site-packages/pythongettext/tests'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/cssutils'...
Listing './lib/python3.5/site-packages/repoze/cssutils/common'...
Compiling './lib/python3.5/site-packages/repoze/cssutils/common/path.py'...
***   File "./lib/python3.5/site-packages/repoze/cssutils/common/path.py", line 728
    def mkdir(self, mode=0777):
                            ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/repoze/cssutils/common/testrunner.py'...
***   File "./lib/python3.5/site-packages/repoze/cssutils/common/testrunner.py", line 142
    if msg: print msg
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/repoze/cssutils/dom.py'...
***   File "./lib/python3.5/site-packages/repoze/cssutils/dom.py", line 39
    def matchesNode(self, (namespace, tagName)):
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repoze/cssutils/parser.py'...
***   File "./lib/python3.5/site-packages/repoze/cssutils/parser.py", line 534
    except self.ParseError, err:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/repoze/cssutils/tests'...
Compiling './lib/python3.5/site-packages/repoze/cssutils/tests/test_css.py'...
***   File "./lib/python3.5/site-packages/repoze/cssutils/tests/test_css.py", line 74
    def assertEqualFn(result, (name, params)):
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repoze/cssutils/tests/test_css_cascade.py'...
***   File "./lib/python3.5/site-packages/repoze/cssutils/tests/test_css_cascade.py", line 73
    def assertEqualFn(result, (name, params)):
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repoze/cssutils/tests/test_css_media.py'...
***   File "./lib/python3.5/site-packages/repoze/cssutils/tests/test_css_media.py", line 47
    except CSSParseError, err:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/repoze.cssutils-1.0a6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/deprecation'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/i18n'...
Listing './lib/python3.5/site-packages/zope/i18n/interfaces'...
Listing './lib/python3.5/site-packages/zope/i18n/locales'...
Listing './lib/python3.5/site-packages/zope/i18n/locales/data'...
Listing './lib/python3.5/site-packages/zope/i18n/locales/tests'...
Listing './lib/python3.5/site-packages/zope/i18n/tests'...
Listing './lib/python3.5/site-packages/zope/i18n/tests/locale'...
Listing './lib/python3.5/site-packages/zope/i18n/tests/locale/de'...
Listing './lib/python3.5/site-packages/zope/i18n/tests/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/zope/i18n/tests/locale/en'...
Listing './lib/python3.5/site-packages/zope/i18n/tests/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/zope/i18n/tests/locale2'...
Listing './lib/python3.5/site-packages/zope/i18n/tests/locale2/en'...
Listing './lib/python3.5/site-packages/zope/i18n/tests/locale2/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/zope/i18n/tests/locale3'...
Listing './lib/python3.5/site-packages/zope/i18n/tests/locale3/en'...
Listing './lib/python3.5/site-packages/zope/i18n/tests/locale3/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/zope/i18nmessageid'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/schema'...
Listing './lib/python3.5/site-packages/zope/schema/tests'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.deprecation-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.i18n-4.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.i18nmessageid-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.schema-4.5.0.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
